--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@
 .pnp.js
 
 **/__pycache__/*
+__pycache__/
 
 # testing
 /coverage
@@ -93,3 +94,5 @@ tags
 [._]*.un~
 
 .vercel
+src/auth/__pycache__/__init__.cpython-37.pyc
+src/auth/__pycache__/auth.cpython-37.pyc
